attempt to fix credit overflow

--- a/_custom/css/player.css
+++ b/_custom/css/player.css
@@ -51,7 +51,7 @@
 }
 
 .layoutArea .contentViewContainer .contentViewContents .customhtmlContainer td {
-	padding: 4px 10px;
+	padding: 0px 10px;
 }
 
 .layoutArea .contentViewContainer .contentViewContents .customhtmlContainer h2 {
